# vibetunnel

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  WEBSOCKET_IMPLEMENTATION.md  appcast-prerelease.xml  calculate-all-coverage.sh
.github/: SLACK_SETUP.md
.github/workflows/: README.md  ci.yml  claude-code-review.yml  claude.yml  go.yml  ios.yml  mac.yml  monitor-ci.yml  node.yml  release.yml  sea-build-test.yml  slack-notify.yml  web-ci.yml
TestResults-Mac.xcresult/: Info.plist
TestResults-Mac.xcresult/Data/: data.0~JbRq0CxfDZlGvSn2bavpt13MgvPmFrD5awpUZx1tlq3UMIDX0-_JJXQ9UddTT_1aGYcLxCelUaWPzzZR8iMx2g==  data.0~Jfp7dB8cxiVi-HPTsWexA2J8w2GXbhBRwd5crHh0LVVUNsATswvWV48pI-x0LtdfTLXrTSpOEQ6OrtkSAlEDXA==  data.0~PjJBPuXh5n4z0BI0pqhYvgAAiCHvLbgYEQAf4SkyUpTfvsWPIojkvfxynGZQYO0KMBqg8OECUVXHuU55JZ-mIQ==  data.0~epzZGAbvlpJWbk2NOKyLfvKfumUo6fn03cRm-lvz-xVLdGu-BySls2PRUBDc8PxYK8e1OHqhpQkDxraD86v_-A==  data.0~gtj7sFQZhyPHqbaLD3DtmcVTtRiMkBYjLEl8zTjVM37v1pqj3M9pRBekuSoPDkJM7DPowSPz3mGPjVn1SJBAfw==  data.0~lLECBpqW6Q7ROIBgckcRxkZrCBH6YioDognmUHm2s4MSeURoMYCFRU4IN-h1oP4zKuvQd3q6SL7Ka4X4Zr0Tsg==  refs.0~_BmiIhZ3Dt6kixdIQkL-maeErFEpzVgs8AZS8e8Q9zrK7agLeAMiPYxB1Tt9O20yLVXg_p_xxwE9hYE2YU1jfg==  (+2 more)
VibeTunnel.xcworkspace/: contents.xcworkspacedata
apple/: .swiftlint.yml
assets/AppIcon.icon/: icon.json
docs/: ARCHITECTURE.md  CONTRIBUTING.md  authentication.md  build-system.md  custom-node-build-flags.md  custom-node.md  deployment.md  development.md  files.md  ios-enhancements.md  ios-update-progress.md  ios-web-parity-plan.md  project-overview.md  push-notification.md  spec.md  tauri-nodejs-architecture.md  testing.md
electron/: .electron-builder.config.js  .gitignore  BUILD_NOTES.md  CROSS_COMPILATION.md  ELECTRON_PORT_SUMMARY.md  README.md  build-whitelist.js  electron-builder-minimal.json  electron-builder-optimized.json  electron-builder.json  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.renderer.json  vitest.config.ts
ios/: Package.swift  run-tests-xcode.sh  run-tests.sh
mac/: .gitignore  .swiftformat  .swiftlint.yml  CHANGELOG.md  Package.swift  appcast-prerelease.xml
scripts/: test-all-coverage.sh
server/: .gitignore  PLAN.md  README.md  go.mod  go.sum  test_basic.sh  test_session.sh
tauri/: .gitignore  CURRENT_STATE.md  DEVELOPMENT.md  ENHANCEMENTS_COMPLETE.md  IMPROVEMENTS.md  README.md  TYPESCRIPT_MIGRATION.md  build.sh  dev.sh  lint-fix.sh  lint.sh  package-lock.json  package.json  pnpm-lock.yaml  settings.html  tsconfig.json  vite.config.js  web-test-runner.config.mjs  welcome.html
tauri/src-tauri/: .gitignore  Cargo.toml  README.md  clippy.toml  entitlements.plist  rustfmt.toml  tauri.conf.json
tauri/src-tauri/.cargo/: config.toml
tauri/src-tauri/capabilities/: all-windows.json  default.json  settings.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/public/: server-console.html  settings.html  welcome.html
tauri/src-tauri/src/: api_client.rs  api_testing.rs  app_mover.rs  auth.rs  auth_cache.rs  auto_launch.rs  backend_manager.rs  cast.rs  cli_installer.rs  commands.rs  debug_features.rs  errors.rs  fs_api.rs  keychain.rs  lib.rs  main.rs  network_utils.rs  ngrok.rs  notification_manager.rs  permissions.rs  port_conflict.rs  server.rs  session_monitor.rs  settings.rs  state.rs  terminal.rs  terminal_detector.rs  terminal_integrations.rs  terminal_spawn_service.rs  tray_menu.rs  tty_forward.rs  unix_socket_server.rs  updater.rs  welcome.rs
tauri/src-tauri/tests/: keychain_integration_test.rs  server_integration_test.rs  terminal_integration_test.rs
web/: .gitignore  .npmrc  CLAUDE.md  FRONTEND_LOGGING_UPDATE_PROMPT.md  LOGGING_STYLE_GUIDE.md  README.md  SECURITY.md  biome.json  build-custom-node.js  build-native-clean.sh  build-native-node.js  build-native.js  coverage-results.json  coverage-summary-formatted.json  coverage.json  custom-node.md  eslint.config.js  fwd-test.ts  package-lock.json  package.json  pnpm-lock.yaml  spec.md  tailwind.config.js  test-results.json  tsconfig.base.json  tsconfig.client.json  tsconfig.json  tsconfig.server.json  tsconfig.sw.json  tsconfig.test.json  tty-fwd  vitest.config.e2e.ts  vitest.config.ts
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/src/: auto_launch.rs  commands.rs  lib.rs  main.rs  server.rs  settings.rs  terminal.rs  tray_menu.rs
(+733 files in other folders)
